# debezium-testbed

./: Cargo.toml  README.md
dbz_init/: dbz.json
demo/: Cargo.toml
demo/src/: consumer.rs  lib.rs  mysql.rs
demo/tests/: new_testbed.rs
sql_init/: test.sql
src/: lib.rs  main.rs
src/http/: mod.rs
src/stack/: kafka_connect.rs  mod.rs  mysql.rs
src/stack/containers/: kafka.rs  kafka_connect.rs  kui.rs  mod.rs  mysql.rs  schema_registry.rs  zookeeper.rs
