workspace = { members = ["demo"] }
[package]
name = "debezium-testbed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bollard = "0.16.0"
futures-util = "0.3.30"
mysql = "24.0.0"
rand = "0.8.5"
reqwest = {version = "0.11.25", features  = ["json"] }
rocket = { version = "0.5.0", features = ["json", "tls"] }
serde = "1.0.197"
tokio = {version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
