[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.16.0"
kafka = "0.10.0"
mysql = "24.0.0"
rdkafka = "0.36.2"
reqwest = "0.11.25"
schema_registry_converter = {version = "4.0.0", features = ["avro"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = {version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
